--- a/index.html
+++ b/index.html
@@ -1,53 +1,50 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Geolocation</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 200px;
+        background-color: beige;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <!--actual code to get location -->
     <script src="js/main.js"></script>
-    <title>Geolocation Demo</title>
   </head>
   <body>
-    <header>
-
-    </header>
-
-    <main>
-
-      <div class="container">
-        <!-- A jumbotron for location form. -->
-        <div class="jumbotron">
-          <h1 class="display-4">HTML Geolocation Demo</h1>
-          <p class="lead">This is a simple demo of geolocation api of HTML.</p>
-          <hr class="my-4">
-          <div class="text-center">
-            <p>Click here to get your location.</p>
-          <a class="btn btn-success btn-lg" href="#" role="button">Locate</a>
-          </div>
-        </div>
-
-        <!-- A division for displaying map. -->
         <div class="container">
-          <map name="">
-
-          </map>
-        </div>
-      </div>
-    </main>
-
-    <footer>
-
-    </footer>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+                <!-- A jumbotron for location form. -->
+                <div class="jumbotron">
+                  <h1 class="display-4">HTML Geolocation Demo</h1>
+                  <p class="lead">This is a simple demo of geolocation api of HTML.</p>
+                  <hr class="my-4">
+                  <div class="text-center">
+                    <p>Click here to get your location.</p>
+                    <a class="btn btn-success btn-lg" href="#" role="button" onclick="showLocation()">Locate</a>
+                    <!-- A division for displaying map. -->
+                    <div class="container mt-5" style="display: none;" id="mapContainer">
+                            <div id="map"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+    
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADvTWYfkpadBx6wki0xSQLwn-WJlsEWVg&callback=initMap">
+    </script>
   </body>
 </html>
