--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<head>
+  <title>Geolocation</title>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
 
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
-  </head>
-  <body>
-        <div class="container">
-                <!-- A jumbotron for location form. -->
-                <div class="jumbotron">
-                  <h1 class="display-4">HTML Geolocation Demo</h1>
-                  <p class="lead">This is a simple demo of geolocation api of HTML.</p>
-                  <hr class="my-4">
-                  <div class="text-center">
-                    <p>Click here to get your location.</p>
-                    <a class="btn btn-success btn-lg" href="#" role="button" onclick="showLocation()">Locate</a>
-                    <!-- A division for displaying map. -->
-                    <div class="container mt-5" style="display: none;" id="mapContainer">
-                            <div id="map"></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-    
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADvTWYfkpadBx6wki0xSQLwn-WJlsEWVg&callback=initMap">
-    </script>
-  </body>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <script src="js/main.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <!-- A jumbotron for location form. -->
+    <div class="jumbotron">
+      <h1 class="display-4">HTML Geolocation Demo</h1>
+      <p class="lead">This is a simple demo of geolocation api of HTML.</p>
+      <hr class="my-4">
+      <div class="text-center">
+        <p>Click here to get your location.</p>
+        <a class="btn btn-success btn-lg" href="#" role="button" onclick="showLocation()">Locate</a>
+        <!-- A division for displaying map. -->
+        <div class="container mt-5" style="display: none;" id="mapContainer">
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADvTWYfkpadBx6wki0xSQLwn-WJlsEWVg&callback=initMap">
+  </script>
+</body>
+
 </html>
